--- a/pongprincipal.css
+++ b/pongprincipal.css
@@ -1,10 +1,24 @@
+body {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
+header {
+    height: 160px;
+    display: grid;
+    place-items: center;
+}
+
 h1 {
-    text-align: center;
+    height: 80px;
+}
+
+#titulo {
+    display: grid;
+    place-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    font-size: 100px;
-    letter-spacing: -1px;
-    font-weight: bolder;
+    font-size: 70px;
+    margin: 0px;
 }
 
 canvas {
@@ -17,26 +31,51 @@ canvas {
     
 }
 
+#baseplacar {
+    background-color: white;
+}
+
+.table {
+    display: grid;
+    place-items: center;
+    margin-bottom: 50px;
+}
+
+.placar {
+    padding: 0px;
+    display: grid;
+    place-items: center;
+    width: 600px;
+}
+
+.placarplayer {
+    list-style-type: none;
+}
+
+
+
+#divmenu {
+    display: grid;
+    place-content: center;
+}
+
 #menugame {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+
+    margin-left: auto;
+    margin-right: auto;
+    height: 70px;
     
 }
 
 .botao {
-    border: black;
-    height: 50px;
-    width: 100px;
-    margin: 25px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    opacity: 100;
-    background-color: #DF6A6A;
-    
-}
-
-#baseplacar {
+    display: inline;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    border: 3px solid black;
     background-color: white;
-}
+    margin-inline: 50px;
+    
+  }
