--- a/pongprincipal.css
+++ b/pongprincipal.css
@@ -77,5 +77,11 @@ canvas {
     border: 3px solid black;
     background-color: white;
     margin-inline: 50px;
-    
+  }
+
+  .botao:hover {
+    cursor: pointer;
+    border: 3px solid black;
+    background-color: black;
+    color: white;
   }
