--- a/pongprincipal.css
+++ b/pongprincipal.css
@@ -64,7 +64,6 @@ canvas {
     margin-left: auto;
     margin-right: auto;
     height: 70px;
-    
 }
 
 .botao {
@@ -77,11 +76,38 @@ canvas {
     border: 3px solid black;
     background-color: white;
     margin-inline: 50px;
-  }
+}
 
-  .botao:hover {
+.botao:hover {
     cursor: pointer;
     border: 3px solid black;
     background-color: black;
     color: white;
-  }
+}
+
+#blocodescricao {
+    display: grid;
+    place-content: center;
+    height: 100px;
+    margin-top: 10px;
+} 
+
+#descricao {
+    width: 600px;
+    display: grid;
+    margin-left: 0px;
+    height: 100px;
+} 
+
+#tituloparagrafo {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    height: 30px;
+    margin: 0px;
+}
+
+#paragrafo {
+font-size: 18px;
+font-family: Arial, Helvetica, sans-serif;
+margin: 0px;
+}
