--- a/pongprincipal.css
+++ b/pongprincipal.css
@@ -14,8 +14,6 @@ h1 {
 }
 
 #titulo {
-    display: grid;
-    place-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 70px;
     margin: 0px;
@@ -64,9 +62,10 @@ canvas {
     margin-left: auto;
     margin-right: auto;
     height: 70px;
+    
 }
 
-.botao {
+.btn {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     display: inline;
@@ -76,6 +75,8 @@ canvas {
     border: 3px solid black;
     background-color: white;
     margin-inline: 50px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .botao:hover {
@@ -99,14 +100,14 @@ canvas {
     height: 100px;
 } 
 
-#tituloparagrafo {
+#descricao__titulo {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     height: 30px;
     margin: 0px;
 }
 
-#paragrafo {
+#descricao__paragrafo {
 font-size: 18px;
 font-family: Arial, Helvetica, sans-serif;
 margin: 0px;
